# dbt-contract-gen

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  export.py  pyproject.toml  requirements-dev.txt  requirements.txt
dbt-contract-gen/: __main__.py  commands.py
dbtcontractgen/: __main__.py  cli.py
dbtcontractgen/connection/: base.py  postgresql.py  redshift.py
dbtcontractgen/utils/: database.py  dbt.py  dbt_profile_parser.py  queries.py  redshift.py
